opam-version: "2.0"
name: "Quaternion tangles"
synopsis: ""
description: """
Rendering of hypersphere traces
"""
license: ""
maintainer: "pizza964333@gmail.com"
authors: [ "Fayonnagan Piker" ]
homepage: "https://hub.darcs.net/Fayonnagan_Piker/ocaml_quaternion_tangles"
bug-reports: ""
dev-repo: "darcs+https://hub.darcs.net/Fayonnagan_Piker/ocaml_quaternion_tangles"
available: os = "linux" | os = "macos"
build: [
  ["opam" "config" "exec" "--" "dune" "subst"] {pinned}
  ["opam" "config" "exec" "--" "dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
install: ["opam" "config" "exec" "--" "dune" "install"]
run-test: ["dune" "runtest" "-p" name]
depends: [
  "ppx_implicits" {build & = "hg"}
  "ppx_monadic" {build}
]
pin-depends: [
  ["ppx_implicits.hg" "hg+https://bitbucket.org/Kamiel/ppx_implicits#76683cc35f69f7a152cbb65f3ae417acfe3b5adb"]
]
